--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
-        "laravel/framework": "7.0",
+        "php": ">=5.6.4",
+        "laravel/framework": "5.7.*",
         "hashids/hashids": "^1.0"
     },
     "autoload": {
